--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <div class="wrapper">
     <div class="content">
       @include('partials/header.html')
+      @include('partials/portfolio.html')
 
     </div>
   </div>
